--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
-		"@astrojs/cloudflare": "^12.2.2",
+		"@astrojs/cloudflare": "^9.2.1",
 		"@astrojs/mdx": "^4.0.8",
 		"@astrojs/rss": "^4.0.11",
 		"@astrojs/sitemap": "^3.2.1",
 		"@astrojs/tailwind": "^6.0.0",
 		"astro": "^5.3.1",
+		"lucide-react": "^0.477.0",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.4.2"
 	},
