--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 		"@astrojs/rss": "^4.0.11",
 		"@astrojs/sitemap": "^3.2.1",
 		"@astrojs/tailwind": "^6.0.0",
+		"@iconify-json/tabler": "^1.2.16",
 		"astro": "^5.3.1",
+		"astro-icon": "^1.1.5",
 		"lucide-react": "^0.477.0",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.4.2"
